W17-W23 kitting line raw data

--- a/Week17_23.ipynb
+++ b/Week17_23.ipynb
@@ -314,21 +314,37 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mealkits per crate data associate with \"Recipe Code\"\n",
+    "mk_crate_prepared = mk_crate_raw[['Recipe Code', 'Meal Kits/Crate']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# join recipe details with 'MKs/Crate'\n",
+    "prepared_4P = prepared_4P.join(mk_crate_prepared.set_index('Recipe Code')) # default lef join\n",
+    "prepared_2P = prepared_2P.join(mk_crate_prepared.set_index('Recipe Code'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "    Recipe Code  Meal Kits/Crate\n0          17A2                5\n1          17B2                6\n2          17C2                6\n3          17D2                5\n4          17E2                6\n..          ...              ...\n202        23S4                5\n203        23T4                6\n204        23O4                4\n205        23P4                3\n206        23Q4                5\n\n[207 rows x 2 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Recipe Code</th>\n      <th>Meal Kits/Crate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>17A2</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>17B2</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>17C2</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>17D2</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>17E2</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>202</td>\n      <td>23S4</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <td>203</td>\n      <td>23T4</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <td>204</td>\n      <td>23O4</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <td>205</td>\n      <td>23P4</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <td>206</td>\n      <td>23Q4</td>\n      <td>5</td>\n    </tr>\n  </tbody>\n</table>\n<p>207 rows × 2 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 20
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "E  H  M  VE  VH  Meal Kits/Crate\nRecipe Code                                  \n17A2         2  2  1   2   1                5\n17B2         2  0  2   2   0                6\n17C2         1  2  1   2   0                6\n17D2         3  0  3   2   0                5\n17E2         3  0  1   3   1                6\n             E  H  M  VE  VH  Meal Kits/Crate\nRecipe Code                                  \n17A4         3  0  2   3   4                4\n17B4         3  2  0   4   0                4\n17C4         0  4  3   2   0                5\n17D4         3  0  7   4   0                4\n17E4         3  0  3   4   2                5\n"
     }
    ],
    "source": [
-    "# Mealkits per crate data associate with \"Recipe Code\"\n",
-    "mk_crate_prepared = mk_crate_raw[['Recipe Code', 'Meal Kits/Crate']]\n",
-    "mk_crate_prepared"
+    "print(prepared_2P.head())\n",
+    "print(prepared_4P.head())"
    ]
   },
   {
@@ -336,7 +352,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# pliminary filtering scanny data (Week 17 - Week 23)\n",
+    "scanny_raw = pd.read_csv('')"
+   ]
   }
  ],
  "metadata": {
