Scanny data prepared, ready for the "Giant Join"!

--- a/Week17_23.ipynb
+++ b/Week17_23.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -349,13 +349,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(60974, 14)"
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "# pliminary filtering scanny data (Week 17 - Week 23)\n",
+    "scanny_raw = pd.read_csv('./ScannyData_W17-W23.csv')\n",
+    "scanny_raw.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(36475, 15)"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "# row filitering: 1.\"Production\"; 2. Completing a dolly; 3.  2 < \"Time Consumption\" < 10 \n",
+    "Conditions = (\n",
+    "(scanny_raw['Activity'] == 'Production') & \n",
+    "(scanny_raw['Seq Code'].notnull()) &\n",
+    "((scanny_raw['Time Consumption'] > 2) & (scanny_raw['Time Consumption'] < 10))\n",
+    ")\n",
+    "scanny_raw_row_filitered = scanny_raw[Conditions].reset_index()\n",
+    "scanny_raw_row_filitered.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "      Recipe Name     Week  Pickers Count  Time Consumption\n0              C4  2020-17            2.0              8.00\n1              C4  2020-17            2.0              5.00\n2              C4  2020-17            2.0              7.00\n3              C4  2020-17            2.0              5.00\n4              C4  2020-17            2.0              8.00\n...           ...      ...            ...               ...\n36470          M4  2020-23            2.0              4.55\n36471          M4  2020-23            2.0              3.48\n36472          M4  2020-23            2.0              3.43\n36473          M4  2020-23            2.0              2.55\n36474          M4  2020-23            2.0              2.70\n\n[36475 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Recipe Name</th>\n      <th>Week</th>\n      <th>Pickers Count</th>\n      <th>Time Consumption</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>8.00</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>5.00</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>7.00</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>5.00</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>8.00</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>36470</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>4.55</td>\n    </tr>\n    <tr>\n      <td>36471</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>3.48</td>\n    </tr>\n    <tr>\n      <td>36472</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>3.43</td>\n    </tr>\n    <tr>\n      <td>36473</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>2.55</td>\n    </tr>\n    <tr>\n      <td>36474</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>2.70</td>\n    </tr>\n  </tbody>\n</table>\n<p>36475 rows × 4 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "#column filitering\n",
+    "scanny_staged = scanny_raw_row_filitered[['Recipe Name', 'Week', 'Pickers Count', 'Time Consumption']]\n",
+    "scanny_staged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "      Recipe Name     Week  Pickers Count  Time Consumption Recipe Code   P\n0              C4  2020-17            2.0              8.00        17C4  4P\n1              C4  2020-17            2.0              5.00        17C4  4P\n2              C4  2020-17            2.0              7.00        17C4  4P\n3              C4  2020-17            2.0              5.00        17C4  4P\n4              C4  2020-17            2.0              8.00        17C4  4P\n...           ...      ...            ...               ...         ...  ..\n36470          M4  2020-23            2.0              4.55        23M4  4P\n36471          M4  2020-23            2.0              3.48        23M4  4P\n36472          M4  2020-23            2.0              3.43        23M4  4P\n36473          M4  2020-23            2.0              2.55        23M4  4P\n36474          M4  2020-23            2.0              2.70        23M4  4P\n\n[36475 rows x 6 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Recipe Name</th>\n      <th>Week</th>\n      <th>Pickers Count</th>\n      <th>Time Consumption</th>\n      <th>Recipe Code</th>\n      <th>P</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>8.00</td>\n      <td>17C4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>5.00</td>\n      <td>17C4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>7.00</td>\n      <td>17C4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>5.00</td>\n      <td>17C4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>8.00</td>\n      <td>17C4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>36470</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>4.55</td>\n      <td>23M4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>36471</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>3.48</td>\n      <td>23M4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>36472</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>3.43</td>\n      <td>23M4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>36473</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>2.55</td>\n      <td>23M4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>36474</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>2.70</td>\n      <td>23M4</td>\n      <td>4P</td>\n    </tr>\n  </tbody>\n</table>\n<p>36475 rows × 6 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "scanny_staged['Recipe Code'] = scanny_staged['Week'].str[-2:] + scanny_staged['Recipe Name']\n",
+    "scanny_staged['P'] = scanny_staged['Recipe Name'].str[-1] + \"P\"\n",
+    "scanny_staged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pliminary filtering scanny data (Week 17 - Week 23)\n",
-    "scanny_raw = pd.read_csv('')"
+    "scanny_prepared = scanny_staged[['Recipe Code', 'Pickers Count', 'Time Consumption', 'P']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Recipe Code  Pickers Count  Time Consumption   P\n525          17D2            3.0              6.00  2P\n526          17D2            3.0              6.00  2P\n527          17D2            3.0              5.00  2P\n528          17D2            3.0              4.00  2P\n529          17D2            3.0              5.00  2P\n...           ...            ...               ...  ..\n36187        23P2            3.0              4.48  2P\n36188        23P2            3.0              5.42  2P\n36189        23P2            3.0              4.83  2P\n36190        23P2            3.0              5.33  2P\n36191        23P2            3.0              4.60  2P\n\n[14915 rows x 4 columns]\n      Recipe Code  Pickers Count  Time Consumption   P\n0            17C4            2.0              8.00  4P\n1            17C4            2.0              5.00  4P\n2            17C4            2.0              7.00  4P\n3            17C4            2.0              5.00  4P\n4            17C4            2.0              8.00  4P\n...           ...            ...               ...  ..\n36470        23M4            2.0              4.55  4P\n36471        23M4            2.0              3.48  4P\n36472        23M4            2.0              3.43  4P\n36473        23M4            2.0              2.55  4P\n36474        23M4            2.0              2.70  4P\n\n[21559 rows x 4 columns]\n       Recipe Code  Pickers Count  Time Consumption   P\n17999  20Break End            3.0              4.53  dP\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Empty DataFrame\nColumns: []\nIndex: []",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "# Scanny data prepared\n",
+    "scanny_prepared.groupby('P').apply(print)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
