--- a/Week17_23.ipynb
+++ b/Week17_23.ipynb
@@ -349,6 +349,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export prepared recipe pack-guide in csv format\n",
+    "\n",
+    "pd.concat([prepared_2P, prepared_4P]).to_csv('./prepared_packguide.csv', index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -394,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +415,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Recipe Name</th>\n      <th>Week</th>\n      <th>Pickers Count</th>\n      <th>Time Consumption</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>8.00</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>5.00</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>7.00</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>5.00</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>8.00</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>36470</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>4.55</td>\n    </tr>\n    <tr>\n      <td>36471</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>3.48</td>\n    </tr>\n    <tr>\n      <td>36472</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>3.43</td>\n    </tr>\n    <tr>\n      <td>36473</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>2.55</td>\n    </tr>\n    <tr>\n      <td>36474</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>2.70</td>\n    </tr>\n  </tbody>\n</table>\n<p>36475 rows × 4 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 25
     }
    ],
    "source": [
@@ -415,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +436,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Recipe Name</th>\n      <th>Week</th>\n      <th>Pickers Count</th>\n      <th>Time Consumption</th>\n      <th>Recipe Code</th>\n      <th>P</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>8.00</td>\n      <td>17C4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>5.00</td>\n      <td>17C4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>7.00</td>\n      <td>17C4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>5.00</td>\n      <td>17C4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>C4</td>\n      <td>2020-17</td>\n      <td>2.0</td>\n      <td>8.00</td>\n      <td>17C4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <td>36470</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>4.55</td>\n      <td>23M4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>36471</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>3.48</td>\n      <td>23M4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>36472</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>3.43</td>\n      <td>23M4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>36473</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>2.55</td>\n      <td>23M4</td>\n      <td>4P</td>\n    </tr>\n    <tr>\n      <td>36474</td>\n      <td>M4</td>\n      <td>2020-23</td>\n      <td>2.0</td>\n      <td>2.70</td>\n      <td>23M4</td>\n      <td>4P</td>\n    </tr>\n  </tbody>\n</table>\n<p>36475 rows × 6 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 26
     }
    ],
    "source": [
@@ -436,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -460,12 +471,22 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 37
+     "execution_count": 28
     }
    ],
    "source": [
     "# Scanny data prepared\n",
     "scanny_prepared.groupby('P').apply(print)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export prepared scanning system data to csv\n",
+    "scanny_prepared.to_csv('./scanny_prepared.csv', index = False)"
    ]
   },
   {
