--- a/preprocessing_raw_data(Week17_23).ipynb
+++ b/preprocessing_raw_data(Week17_23).ipynb
@@ -373,9 +373,9 @@
     }
    ],
    "source": [
-    "# pliminary filtering scanny data (Week 17 - Week 23)\n",
-    "scanny_raw = pd.read_csv('./ScannyData_W17-W23.csv')\n",
-    "scanny_raw.shape"
+    "# pliminary filtering Kitting Line Scanning System data (Week 17 - Week 23)\n",
+    "klss_raw = pd.read_csv('./Kitting_raw_W17-W23.csv')\n",
+    "klss_raw.shape"
    ]
   },
   {
@@ -395,12 +395,12 @@
    "source": [
     "# row filitering: 1.\"Production\"; 2. Completing a dolly; 3.  2 < \"Time Consumption\" < 10 \n",
     "Conditions = (\n",
-    "(scanny_raw['Activity'] == 'Production') & \n",
-    "(scanny_raw['Seq Code'].notnull()) &\n",
-    "((scanny_raw['Time Consumption'] > 2) & (scanny_raw['Time Consumption'] < 10))\n",
+    "(klss_raw['Activity'] == 'Production') & \n",
+    "(klss_raw['Seq Code'].notnull()) &\n",
+    "((klss_raw['Time Consumption'] > 2) & (klss_raw['Time Consumption'] < 10))\n",
     ")\n",
-    "scanny_raw_row_filitered = scanny_raw[Conditions].reset_index()\n",
-    "scanny_raw_row_filitered.shape"
+    "klss_raw_row_filitered = klss_raw[Conditions].reset_index()\n",
+    "klss_raw_row_filitered.shape"
    ]
   },
   {
@@ -420,8 +420,8 @@
    ],
    "source": [
     "#column filitering\n",
-    "scanny_staged = scanny_raw_row_filitered[['Recipe Name', 'Week', 'Pickers Count', 'Time Consumption']]\n",
-    "scanny_staged"
+    "klss_staged = klss_raw_row_filitered[['Recipe Name', 'Week', 'Pickers Count', 'Time Consumption']]\n",
+    "klss_staged"
    ]
   },
   {
@@ -440,9 +440,9 @@
     }
    ],
    "source": [
-    "scanny_staged['Recipe Code'] = scanny_staged['Week'].str[-2:] + scanny_staged['Recipe Name']\n",
-    "scanny_staged['P'] = scanny_staged['Recipe Name'].str[-1] + \"P\"\n",
-    "scanny_staged"
+    "klss_staged['Recipe Code'] = klss_staged['Week'].str[-2:] + klss_staged['Recipe Name']\n",
+    "klss_staged['P'] = klss_staged['Recipe Name'].str[-1] + \"P\"\n",
+    "klss_staged"
    ]
   },
   {
@@ -451,7 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scanny_prepared = scanny_staged[['Recipe Code', 'Pickers Count', 'Time Consumption', 'P']]"
+    "klss_prepared = klss_staged[['Recipe Code', 'Pickers Count', 'Time Consumption', 'P']]"
    ]
   },
   {
@@ -475,8 +475,8 @@
     }
    ],
    "source": [
-    "# Scanny data prepared\n",
-    "scanny_prepared.groupby('P').apply(print)"
+    "# Kitting Line Scanning System data prepared\n",
+    "klss_prepared.groupby('P').apply(print)"
    ]
   },
   {
@@ -486,7 +486,7 @@
    "outputs": [],
    "source": [
     "# Export prepared scanning system data to csv\n",
-    "scanny_prepared.to_csv('./scanny_prepared.csv', index = False)"
+    "klss_prepared.to_csv('./prepared_KittingRaw.csv', index = False)"
    ]
   },
   {
